removed duplicate charts

--- a/wonitor/index.html
+++ b/wonitor/index.html
@@ -98,6 +98,7 @@
         body.insertBefore(clone, body.firstChild);
         body.insertBefore(h2, body.firstChild);
       }
+      template.remove();
     }
   </script>
   <footer>
