adding sorting for data points

--- a/wonitor/configurator.html
+++ b/wonitor/configurator.html
@@ -273,11 +273,19 @@
           </select><span></span></td>
         </tr>
         <tr>
+          <td>Sort Datapoints</td>
+          <td><select>
+            <option value="asc" selected>➚ Ascending</option>
+            <option value="desc">➘ Descending</option>
+            <option value="none">⤮ None</option>
+          </select><span></span></td>
+        </tr>
+        <tr>
           <td>Sort Datasets</td>
           <td><select>
-            <option value="asc" selected>Ascending</option>
-            <option value="desc">Descending</option>
-            <option value="none">None</option>
+            <option value="asc" selected>↑ Ascending</option>
+            <option value="desc">↓ Descending</option>
+            <option value="none">⥮ None</option>
           </select><span></span></td>
         </tr>
         <tr><td>AutoRotate Bar Charts</td><td><label><input type="checkbox" /><span></span></label></td></tr>
