added more examples

--- a/wonitor/configurator.html
+++ b/wonitor/configurator.html
@@ -19,7 +19,8 @@
         <li><a href="#x=map&y=count&t=winner&autoRotate">Team balance by map</a></li>
         <li><a href="#x=map&y=count&t=winner&autoRotate&tNormalize&yLabel=Win Ratio">Win Ratio by map</a></li>
         <li><a href="#x=winner&y=count&t=serverId">Team balance by server</a></li>
-        <li><a href="#x=map&y=count">Map distribution</a></li>
+        <li><a href="#x=map&y=numRounds&ySort=desc">Map distribution</a></li>
+        <li><a href="#x=map&y=count">Map popularity</a></li>
         <li><a href="#x=map&y=length_sum&yScaleBy=60&plotType=pie&yLabel=Round Length Sum in Minutes">Map share by total playtime</a></li>
         <li><a href="#x=id&y=length&t=map">Game lengths by map</a></li>
         <li><a href="#x=length&y=numRounds&xBinSize=60&xScaleBy=60&xLabel=Round Length in Minutes">Game length distribution</a></li>
