--- a/wonitor/configurator.html
+++ b/wonitor/configurator.html
@@ -31,6 +31,7 @@
         <li><a href="#x=numPlayers&y=length_avg&yScaleBy=60&t=map&length_gt=180&yLabel=Round Length Average in Minutes">Average game length by player count</a></li>
         <li><a href="#x=startLocation1&y=startLocation2&s=count&sizeRef=0.12&t=map">Games played per start location</a></li>
         <li><a href="#x=startLocation1&y=startLocation2&s=count&sizeRef=0.12&t=winner">Winner by start location</a></li>
+        <li><a href="#x=startLocation1&y=startLocation2&s=relWinDiff&sizeRef=0.001&numPlayers_gt=4&map_is=@official">Start location preference for official maps</a></li>
         <li><a href="#x=killsTeam1&y=killsTeam2&s=length&t=winner">Kill Comparison</a></li>
         <li><a href="#x=startHiveTech&y=length&yScaleBy=60&t=winner&map_is=ns2_summit&length_gt=180&startLocation2_is=Atrium">Constraints</a></li>
         <li><a href="#x=time&y=averageSkill&t=serverId&plotType=lines">Average Skill Development</a></li>
