dont hide constraints by default

--- a/wonitor/configurator.html
+++ b/wonitor/configurator.html
@@ -249,7 +249,7 @@
       </div>
       <br />
 
-      <input type="checkbox" id="constToggle" class="toggle" checked />
+      <input type="checkbox" id="constToggle" class="toggle" />
       <h3><label for="constToggle">Constraints</label>
         <select id="constraintsAdd" class="addButton">
           <option class="selectHead" selected>add</option>
