make xTickAngle configurable

--- a/wonitor/configurator.html
+++ b/wonitor/configurator.html
@@ -297,6 +297,17 @@
         <tr><td>Normalize data sets</td><td><label><input type="checkbox" /><span></span></label></td></tr>
         <tr><td>Scale Scatter Points by</td><td><input type="text" size="8" /></td></tr>
         <tr><td>Pie Chart Text Info</td><td><input class="textInfoInput" type="text" size="8" /></td></tr>
+        <tr>
+          <td>Rotate x-Ticks</td>
+          <td><select>
+            <option value="" selected>Default</option>
+            <option value="0">0°</option>
+            <option value="30">30°</option>
+            <option value="45">45°</option>
+            <option value="60">60°</option>
+            <option value="90">90°</option>
+          </select><span></span></td>
+        </tr>
         <tr><td>x-Label</td><td><input type="text" size="20" /></td></tr>
         <tr><td>y-Label</td><td><input type="text" size="20" /></td></tr>
         <tr><td>Title</td><td><input type="text" size="20" /></td></tr>
