--- a/wonitor/configurator.html
+++ b/wonitor/configurator.html
@@ -23,7 +23,7 @@
         <li><a href="#x=map&y=count">Map popularity</a></li>
         <li><a href="#x=map&y=length_sum&yScaleBy=60&plotType=pie&yLabel=Round Length Sum in Minutes">Map share by total playtime</a></li>
         <li><a href="#x=id&y=length&t=map">Game lengths by map</a></li>
-        <li><a href="#x=winner&y=count6&timeDiff_gt=30 days">Team balance last month</a></li>
+        <li><a href="#x=winner&y=count&timeDiff_gt=30 days">Team balance last month</a></li>
         <li><a href="#x=length&xBinSize=300&xScaleBy=60&y=count&t=winner&tNormalize&yLabel=Win%20Ratio&numPlayers_gt=4">Who wins when</a></li>
         <li><a href="#x=length&y=numRounds&xBinSize=60&xScaleBy=60&xLabel=Round Length in Minutes">Game length distribution</a></li>
         <li><a href="#x=length&y=count&xBinSize=60&xScaleBy=60&xLabel=Round Length in Minutes&t=map">Game length distribution by map</a></li>
